--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Este es un e-commerce consumiendo una API y usando React",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve --open",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
