--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
+    "axios": "^1.6.8",
     "babel-loader": "^8.2.5",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
